--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 			  margin: 30px 8px;
 			  padding: 15px;
 			  border-radius: 5px;
-			  background: #eee;
+			  background: green
+			  ;
 		  }
 
 
